[gd_scene load_steps=3 format=3 uid="uid://cfr2j0ekmm5bm"]

[ext_resource type="Script" path="res://addons/ggs/editor/component_panel/component_panel.gd" id="1_3cgut"]
[ext_resource type="Texture2D" uid="uid://cflcng660hsp0" path="res://addons/ggs/assets/close.svg" id="3_wh32e"]

[node name="ComponentPanel" type="Control"]
custom_minimum_size = Vector2(170, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3cgut")

[node name="MainCtnr" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopBar" type="HBoxContainer" parent="MainCtnr"]
layout_mode = 2

[node name="GroupField" type="LineEdit" parent="MainCtnr/TopBar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Node Group
If not empty, newly created components are added to this node group."
placeholder_text = "Node Group"
clear_button_enabled = true

[node name="ActiveSettingCtnr" type="HBoxContainer" parent="MainCtnr"]
layout_mode = 2

[node name="ActiveSettingIndicator" type="LineEdit" parent="MainCtnr/ActiveSettingCtnr"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Active Setting
If not empty, the setting displayed here will be assigned to the components you add."
focus_mode = 0
placeholder_text = "No Active Setting"
editable = false

[node name="ClearActiveSettingBtn" type="Button" parent="MainCtnr/ActiveSettingCtnr"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Clear Active Setting"
icon = ExtResource("3_wh32e")
flat = true

[node name="ComponentList" type="ItemList" parent="MainCtnr"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
allow_reselect = true
item_count = 10
max_columns = 2
same_column_width = true
item_0/text = "Arrow List"
item_1/text = "Checkbox"
item_2/text = "Input Btn"
item_3/text = "Option List"
item_4/text = "Radio List"
item_5/text = "Slider"
item_6/text = "Spinbox"
item_7/text = "Switch"
item_8/text = "Text Field"
item_9/text = "Toggle Btn"
